# Fission

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: coverage.yml
cpp/: wrapper.cpp  wrapper.h
ghidra_decompiler/: CMakeLists.txt  server_main.cc  wrapper.cpp
protos/: ghidra_service.proto
src/: app.rs  main.rs
src/analysis/: mod.rs
src/analysis/decomp/: client.rs  mod.rs
src/analysis/disasm/: engine.rs  mod.rs
src/analysis/loader/: mod.rs
src/app/: commands.rs  mod.rs  state.rs
src/core/: memory.rs
src/debug/: debugger.rs  mod.rs  types.rs
src/debug/windows/: mod.rs  process.rs
src/decomp/: client.rs  engine.rs  ffi.rs  mod.rs  safe.rs  tests.rs
src/disasm/: engine.rs
src/gui/: app.rs  mod.rs
src/script/: bridge.rs  mod.rs
src/ui/: cli.rs  gui.rs  mod.rs
src/ui/gui/: app.rs  menu.rs  messages.rs  mod.rs  state.rs  status_bar.rs  theme.rs
src/ui/gui/app/: debug_ops.rs  decompiler.rs  file_ops.rs  handlers.rs  mod.rs
src/ui/gui/panels/: assembly.rs  bottom_tabs.rs  console.rs  decompile.rs  functions.rs  mod.rs
src/ui/gui/panels/bottom_tabs/: console.rs  debug.rs  hexview.rs  imports.rs  mod.rs  strings.rs
tests/: client_test.rs
