[package]
name = "fission"
version = "0.1.0"
edition = "2021"
authors = ["Fission Dev Team"]
description = "Next-Gen Dynamic Instrumentation Platform"
license = "MIT"
repository = "https://github.com/sjkim1127/Fission"

# Release optimizations
[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[features]
default = []
python = ["pyo3"]
native_decomp = []

[dependencies]
# 1. GUI & Rendering
eframe = "0.27"
egui = "0.27"
rfd = "0.14"  # Native file dialogs
egui_extras = "0.27" # For TableBuilder

# 2. CLI & Input
reedline = "0.30"
clap = { version = "4.5", features = ["derive"] }

# 3. Binary Parsing
goblin = "0.8"
object = "0.32"
capstone = "0.11" # For disassembly

# 4. Scripting
pyo3 = { version = "0.24", features = ["auto-initialize"], optional = true }

# 5. Utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
hex = "0.4"
colored = "2.1"

# 6. gRPC
bytes = "1.5"
tokio = { version = "1.36", features = ["full", "rt-multi-thread"] }
tonic = "0.11"
prost = "0.12"

# System & Debugging
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.28", features = ["ptrace", "process"] }

[build-dependencies]
cc = "1.0"
tonic-build = "0.11"
prost-build = "0.12"
